--- a/Bypass/Views/Bypass/Index.cshtml
+++ b/Bypass/Views/Bypass/Index.cshtml
@@ -1,8 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    Layout = null;
+﻿@{
+    Layout = "_Layout";
 }
 <html>
     <body>
