--- a/Bypass/Views/Shared/_Layout.cshtml
+++ b/Bypass/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
      <link href="/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+     <link href="/css/bypass.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
