--- a/Bypass/Views/Shared/_Layout.cshtml
+++ b/Bypass/Views/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
     <title>@ViewBag.Title</title>
      <link href="/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
      <link href="/css/bypass.css" rel="stylesheet" type="text/css" />
+     <link href="/css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
+     <script src="/js/jquery-3.6.1.min.js"></script>
+     <script src="/js/jquery-ui.min.js"></script>
+     <script src="/js/datepicker-ru.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
