--- a/Bypass/Views/Shared/_Layout.cshtml
+++ b/Bypass/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
      <link href="/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+     <link href="/bootstrap/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
      <link href="/css/bypass.css" rel="stylesheet" type="text/css" />
      <link href="/css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
      <script src="/js/jquery-3.6.1.min.js"></script>
@@ -22,13 +23,18 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a asp-controller="Bypass" asp-action="Index" class="nav-link">Обходные</a>
+                        <a asp-controller="Bypass" asp-action="Index" class="nav-link">
+                            <i class="fa fa-users"></i>
+                            Обходные</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="Bypass" asp-action="Archive" class="nav-link">Архив</a>
+                        <a asp-controller="Bypass" asp-action="Archive" class="nav-link">
+                            <i class="fa fa-history"></i> Архив</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="User" asp-action="Logout" class="nav-link">Выход</a>
+                        <a asp-controller="User" asp-action="Logout" class="nav-link">
+                            <i class="fa fa-sign-out"></i>
+                            Выход</a>
                     </li>
                 </ul>
             </div>
