--- a/Bypass/wwwroot/css/bypass.css
+++ b/Bypass/wwwroot/css/bypass.css
@@ -1,4 +1,7 @@
-﻿nav {
+﻿body {
+    background-color: #f2f2ff;
+}
+nav {
     border-bottom: 1px solid #4857ff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
