--- a/Bypass/wwwroot/css/bypass.css
+++ b/Bypass/wwwroot/css/bypass.css
@@ -1,9 +1,33 @@
 ﻿body {
     background-color: #f2f2ff;
+    font-size: 12px;
 }
 nav {
     border-bottom: 1px solid #4857ff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background: #fff !important;
+}
+
+.container {
+    background-color: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    margin: 30px auto;
+    padding: 15px 10px;
+}
+
+.archive input{
+    margin: 0 5px;
+}
+
+.archive .header {
+    padding: 5px 0 15px 0;
+    border-bottom: 1px solid #4857ff;
+}
+.abutton {
+    border: 1px solid #4857ff;
+    border-radius: 3px;
+    background: #d8e7ff;
 }
 .list-tb {
 }
