--- a/Bypass/Views/Bypass/Archive.cshtml
+++ b/Bypass/Views/Bypass/Archive.cshtml
@@ -35,7 +35,7 @@
    </table>
    <div id="console"></div>
 </div>
-
+<script type="text/javascript" src="./js/datatable.js"></script>
 <script type="text/javascript">
 
     $("#DateFrom").datepicker({
@@ -45,28 +45,8 @@ $("#DateTo").datepicker({
   dateFormat: 'dd.mm.yy',
 });
 
-function test() {
-    alert('test')
-}
 
 
-function addText(el, row) {
-    var tr = document.createElement("tr");
-    var f = (val) => {
-        var t = document.createElement("td");
-        t.innerText = val
-        tr.appendChild(t)
-    }
-
-    f(row.docDate)
-    f(row.eventDate)
-    f(row.event)
-    f(row.fio)
-    f(row.staff)
-    f(row.remark)
-
-    el.append(tr.outerHTML)
-}
 
 function RazorFunction() {
     var vls = {
@@ -79,17 +59,11 @@ function RazorFunction() {
         method:"post",
         data: vls
     }
-    var el = $('.table tbody');
-    el.empty()
 
     $.ajax(request)
     .done(function(data) {
-        let i = 0;
-        data.every((cls) => {
-            addText(el, cls)
-            if (i++ > 100) return false
-            return true
-        });
+        document.atable = new ATable('.table', data)
+        document.atable.drawData()
     });
 }
 </script>
