--- a/Bypass/Views/Bypass/Index.cshtml
+++ b/Bypass/Views/Bypass/Index.cshtml
@@ -1,10 +1,63 @@
-﻿@using Bypass.Data.Types
-@model IEnumerable<BypassItem>
-
-@{
+﻿@{
     Layout = "_Layout";
 }
+<div id="app">
+
+</div>
+<template>
+    <div class="row justify-content-md-center">
+        <div class="col-lg-8 col-md-10 list-cn">
+            <div class="list-cap"><h3>{{objCaption}}</h3></div>
+            <div class="list-det">
+                <div class="row">
+                    <div class="col"><b>Дата создания:</b></div>
+                    <div class="col"><b>Событие:</b></div>
+                    <div class="col"><b>ID в системе:</b></div>
+                    <div class="col-5"><b>Примечание:</b></div>
+                </div>
+                <div class="row">
+                    <div class="col">{{docDate}}</div>
+                    <div class="col">{{typeName}}</div>
+                    <div class="col">{{zverid}}</div>
+                    <div class="col-5">{{remark}}</div>
+                </div>
+                <div class="row">
+                    <div class="col">&nbsp;</div>
+                    <div class="col"><b>Дата события:</b></div>
+                    <div class="col"><b>Контракт:</b></div>
+                    <div class="col-5"><b>Подразделение:</b></div>
+                </div>
+                <div class="row">
+                    <div class="col">&nbsp;</div>
+                    <div class="col">{{eventDate}}</div>
+                    <div class="col">{{zverContract}}</div>
+                    <div class="col-5">{{staff}}</div>
+                </div>
+            </div>
+            <div class="list-grp row">
+                <div class="col">
+                    <div class="getClass({{p138}})">138</div>
+                    <div class="getClass({{p183}})">183</div>
+                    <div class="getClass({{p314}})">314</div>
+                    <div class="getClass({{p405}})">405</div>
+                    <div class="getClass({{p778}})">778</div>
+                    <div class="getClass({{p363}})">363</div>
+                    <div class="getClass({{p124}})">124</div>
+                    <div class="getClass({{p108}})">108</div>
+                    <div class="getClass({{p758}})">758</div>
+                    <img class="grp-img" src="Images/loop.png" title="{{info}}" />
+                    <a href="javascript:(0)" onclick="edit">
+                        <img class="grp-img" src="Images/edit.png" title="Редактировние" data-id="{{iD}}" />
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+</template>
+
 <script>
+
     function getClass(vl) {
                 let rez = ['grp'];
                 switch (vl) {
@@ -22,82 +75,26 @@
                         break;
 
                 }
-                return rez;
+                return rez.join(' ')
             }
+function loadData() {
+    $.ajax({url: 'getbypass'})
+        .done(function(data) { RenderData(data) })
+}
+    function RenderData(data) {
+    data.forEach(t => {
+        var temp = document.getElementsByTagName("template")[0];
+        var clon = temp.cloneNode(true);
+        var el = document.getElementById("app")
+        for (key in t) {
+            clon.innerHTML = clon.innerHTML.replaceAll("{{" + key + "}}", t[key])
+        }
+        clon.innerHTML = clon.innerHTML.replaceAll('getClass(0)', getClass(0))
+        clon.innerHTML = clon.innerHTML.replaceAll('getClass(-1)', getClass(-1))
+        clon.innerHTML = clon.innerHTML.replaceAll('getClass(1)', getClass(1))
+        clon.innerHTML = clon.innerHTML.replaceAll('getClass(2)', getClass(2))
+        el.appendChild(clon.content);
+    })
+}
+    loadData()
 </script>
-@functions{
-    string getClass(decimal vl)
-    {
-        string rez = "";
-                switch (vl) {
-                    case 1:
-                        rez="grp-red";
-                        break;
-                    case 0:
-                        rez="grp-green";
-                        break;
-                    case -1:
-                        rez="grp-gray";
-                        break;
-                    case 2:
-                        rez="grp-yellow";
-                        break;
-
-                }
-                return rez+=" grp";
-    }
-}
-@{
-    foreach (BypassItem item in Model)
-    {
-    <div class="row justify-content-md-center">
-                    <div class="col-lg-8 col-md-10 list-cn">
-                        <div class="list-cap"><h3>@item.ObjCaption</h3></div>
-                        <div class="list-det">
-                            <div class="row">
-                                <div class="col"><b>Дата создания:</b></div>
-                                <div class="col"><b>Событие:</b></div>
-                                <div class="col"><b>ID в системе:</b></div>
-                                <div class="col-5"><b>Примечание:</b></div>
-                            </div>
-                            <div class="row">
-                                <div class="col">@item.DocDate</div>
-                                <div class="col">@item.TypeName</div>
-                                <div class="col">@item.Zverid</div>
-                                <div class="col-5">@item.Remark</div>
-                            </div>
-                            <div class="row">
-                                <div class="col">&nbsp;</div>
-                                <div class="col"><b>Дата события:</b></div>
-                                <div class="col"><b>Контракт:</b></div>
-                                <div class="col-5"><b>Подразделение:</b></div>
-                            </div>
-                            <div class="row">
-                                <div class="col">&nbsp;</div>
-                                <div class="col">@item.EventDate</div>
-                                <div class="col">@item.ZverContract</div>
-                                <div class="col-5">@item.Staff</div>
-                            </div>
-                        </div>
-                        <div class="list-grp row">
-                            <div class="col">
-                                <div class="@getClass(item.P138)">138</div>
-                                <div class="@getClass(item.P183)">183</div>
-                                <div class="@getClass(item.P314)">314</div>
-                                <div class="@getClass(item.P405)">405</div>
-                                <div class="@getClass(item.P778)">778</div>
-                                <div class="@getClass(item.P363)">363</div>
-                                <div class="@getClass(item.P124)">124</div>
-                                <div class="@getClass(item.P108)">108</div>
-                                <div class="@getClass(item.P758)">758</div>
-                                <img class="grp-img" src="Images/loop.png" title="@item.Info" />
-                                <a href="javascript:(0)" onclick="edit">
-                                    <img class="grp-img" src="Images/edit.png" title="Редактировние" :data-id="@item.ID"/>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-    </div>
-    }
-}
