--- a/Bypass/Views/Shared/_Layout.cshtml
+++ b/Bypass/Views/Shared/_Layout.cshtml
@@ -23,6 +23,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                     <li class="nav-item">
+                        <a asp-controller="Bypass" asp-action="BypassEdit" class="nav-link">
+                            <i class="fa fa-users"></i>
+                            Новый обходной</a>
+                    </li>
                     <li class="nav-item">
                         <a asp-controller="Bypass" asp-action="Index" class="nav-link">
                             <i class="fa fa-users"></i>
