--- a/Bypass/Views/Shared/_Layout.cshtml
+++ b/Bypass/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <!--title>@ViewBag.Title</!--title-->
+    <title>Обходные листы</title>
      <link href="/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
      <link href="/bootstrap/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
      <link href="/css/bypass.css" rel="stylesheet" type="text/css" />
