--- a/Bypass/Views/Bypass/BypassEdit.cshtml
+++ b/Bypass/Views/Bypass/BypassEdit.cshtml
@@ -12,7 +12,7 @@
 
 		<div class="row pb-3">
 			<label class="col-sm-2 col-form-label" for="event">Действие:</label>
-			<select name="event" class="col-sm-4 col-lg-2">
+			<select id="event" name="event" class="col-sm-4 col-lg-2">
 			</select>
 		</div>
 		<div class="row pb-3">
@@ -29,3 +29,8 @@
 		</div>
 	</div>
 </div>
+
+<script src="./js/bypass.js"></script>
+<script>
+	load()
+</script>
