--- a/Bypass/Views/Bypass/BypassEdit.cshtml
+++ b/Bypass/Views/Bypass/BypassEdit.cshtml
@@ -25,7 +25,8 @@
 		</div>
 		<div class="row pb-3">
 			<label class="col-sm-2 col-form-label" for="staff">Сотрудник:</label>
-			<input class="col-sm-10 col-lg-5" name="staff" type="text" />
+			<input id="staff" class="col-sm-10 col-lg-5" name="staff" type="text" />
+			<input id="staff-vl" class="col-sm-10 col-lg-5" type="text" />
 		</div>
 	</div>
 </div>
