--- a/Bypass/Views/Bypass/BypassEdit.cshtml
+++ b/Bypass/Views/Bypass/BypassEdit.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="container p-4">
 	<div class="content">
-			<h2>Новый обходной</h2>
+			<h3 id="caption">Новый обходной</h3>
 		
 		<div class="row pb-3">
 			<span class="col">Добавление/редактирование обходных листов</span>
@@ -26,7 +26,7 @@
 		<div class="row pb-3">
 			<label class="col-sm-2 col-form-label" for="staff">Сотрудник:</label>
 			<input id="staff" class="col-sm-10 col-lg-5" name="staff" type="text" />
-			<input id="staff-vl" class="col-sm-10 col-lg-5" type="text" />
+			<input id="staff-vl" class="col-sm-10 col-lg-5" type="hidden" />
 		</div>
 	</div>
 </div>
